dotCMS/core#16314 Align dot-field-helper and fix the overflow of the field text (#972)

--- a/src/app/portlets/content-types/form/content-types-form.component.scss
+++ b/src/app/portlets/content-types/form/content-types-form.component.scss
@@ -15,10 +15,3 @@
 .content-type__form {
     width: 380px;
 }
-
-.form__group dot-field-helper {
-    position: absolute;
-    right: 0;
-    top: $basic-padding * 3;
-    z-index: 1;
-}
